custom auth-context completed

--- a/src/components/MainHeader/MainHeader.module.css
+++ b/src/components/MainHeader/MainHeader.module.css
@@ -7,10 +7,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #741188;
+  background: #0f1e0f;
   padding: 0 2rem;
 }
 
 .main-header h1 {
+  font-weight: 100;
   color: white;
 }
