--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -5,3 +5,11 @@
   margin: 2rem auto;
   text-align: center;
 }
+.home h4{
+  margin: 0 auto;
+  border-radius: 0.25rem;
+  max-width: max-content;
+  background-color: lightpink;
+  padding: 5px;
+  color: #fff;
+}
